@@ -96,6 +96,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - eMail \ mbox           Benny Baumann
 - EPC                    Thorsten Muehlfelder
 - Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
+- Euphoria               Nicholas Koceja
 - F#                     Julien Ortin
 - Falcon                 billykater
 - FO (abas-ERP)          Tan-Vinh Nguyen
