@@ -18,6 +18,7 @@ Version 1.0.8.10
      * C: Loadrunner dialect (Stuart Moncrieff)
      * CoffeeScript (Trevor Burnham)
      * EPC (Thorsten Muehlfelder)
+     * Euphoria (Nicholas Koceja)
      * Falcon (billykater)
      * HTML5 (Robert Lidberg)
      * LLVM (Azriel Fasten)
